# godisfair

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: run_bot.py
