[tool.poetry]
name = "godisfair"
version = "0.1.0"
description = ""
authors = ["d.tsimerman <d.tsimerman@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
revChatGPT = "^2.3.10"
aiogram = "^2.25.1"
pydantic = "^1.10.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
